--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,8 @@
 
   <body>
     <section>
-      <h1>Simple AI Bot</h1>
-      <h2>with Web Speech API</h2>
+      <h1>FRIDAY ASSISTANT</h1>
+      <h2>MEDICAL BOT</h2>
 
       <button><i class="fa fa-microphone"></i></button>
 
