--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
 
       <div>
           <p>You said: <em class="output-you">...</em></p>
-          <p>Bot replied: <em class="output-bot">...</em></p>
+          <p>FRIDAY : <em class="output-bot">...</em></p>
       </div>
     </section>
 
