--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <section>
-      <h1>fridaybot</h1>
+      <h1>Simple bot</h1>
       <h2>with Web Speech API</h2>
 
       <button><i class="fa fa-microphone"></i></button>
